# xfce4-mpc-plugin

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.in  meson.build  meson_options.txt  module.xml
panel-plugin/: Makefile.am  Makefile.in  meson.build  simple-libmpd.c  simple-libmpd.h  xfce4-mpc-plugin.c  xfce4-mpc-plugin.desktop.in  xfce4-mpc-plugin.desktop.in.in  xfce4-mpc-plugin.h
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  oc.po  pl.po  (+20 more)
